--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,7 @@
 //Bulma extensions
 @import 'extensions/divider.sass';
 @import 'extensions/quickview.sass';
+@import 'extensions/tooltip.sass';
 // Helpers
 @import 'helpers';
 //Estilos globais
