--- a/resources/assets/sass/components/_card.scss
+++ b/resources/assets/sass/components/_card.scss
@@ -14,17 +14,38 @@
         margin-top: 25vh;
     }
     &.is-person {
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+            0 3px 1px -2px rgba(0,0,0,0.12),
+            0 1px 5px 0 rgba(0,0,0,0.2);
         img {
             object-fit: cover;
         }
+        .card-content {
+            padding: 10px;
+            height: 5em;
+        }
         .title {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             display: block;
             text-align: center;
+            color: $light-primary;
+            letter-spacing: 2px;
+        }
+    }
+    .button {
+        &.is-floating {
+            position: absolute;
+            z-index: 99;
+            border-radius: 50%;
+            top: -8px;
+            left: -8px;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 }
-  
+
 .post {
     display: flex;
     flex-direction: column;
