--- a/resources/assets/sass/extensions/_quickview.sass
+++ b/resources/assets/sass/extensions/_quickview.sass
@@ -1,4 +1,4 @@
-$quickview-z: 35 !default
+$quickview-z: 100 !default
 $quickview-header-height: 3.25em !default
 $quickview-footer-height: 4rem !default
 $quickview-shadow: 5px 0px 13px 3px rgba( 0, 0, 0, 0.1 ) !default
@@ -77,7 +77,9 @@ $quickview-divider: 1px solid $grey-lighter !default
   -webkit-box-flex: 1
   flex: 1 1 0%
   overflow-y: auto
-  padding: .8rem
+  padding: .8rem 2rem .8rem .8rem
+  line-height: 1.8rem
+  text-align: justify
 
 .quickview-footer
   display: flex
@@ -89,3 +91,14 @@ $quickview-divider: 1px solid $grey-lighter !default
   border-top: $quickview-divider
   > *
     margin: 0 .4rem
+  i
+    font-size: 2rem
+  .fa-lattes
+    transform: rotateZ(-60deg) rotateY(30deg)
+    color: #3C3E73 !important
+  .fa-facebook
+      color: #4267B2
+  .fa-envelope
+      color: #FFD460
+  .fa-linkedin
+      color: #0077B5
