--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -3,4 +3,9 @@
     .modal-content.is-large {
         width: 70%;
     }
+    @media only screen and (max-width:1088px) {
+        .modal-content.is-large {
+            width: 90%;
+        }
+    }
 }
