--- a/resources/assets/sass/components/_navbar.scss
+++ b/resources/assets/sass/components/_navbar.scss
@@ -48,7 +48,7 @@
         line-height: 25px;
         font-size: 0.9rem;
         color: $white;
-        text-transform: uppercase;
+        //text-transform: uppercase;
         &:hover {
             text-decoration: underline;
         }
