Views refatoradas, steps implementados nas modais de PESSOAS e EVENTOS

--- a/resources/assets/sass/_helpers.scss
+++ b/resources/assets/sass/_helpers.scss
@@ -33,3 +33,7 @@ $sides: (top, bottom, left, right);
 .is-rotated-180 {
     transform: rotate(180deg);
 }
+
+img.cover {
+    object-fit: cover;
+}
