--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'extensions/divider.sass';
 @import 'extensions/quickview.sass';
 @import 'extensions/tooltip.sass';
+@import 'extensions/steps.sass';
 // Helpers
 @import 'helpers';
 //Estilos globais
