--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,7 +75,8 @@
 .breadcrumb:not(:last-child),
 .level:not(:last-child),
 .message:not(:last-child),
-.tabs:not(:last-child) {
+.tabs:not(:last-child),
+.steps:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
@@ -13543,6 +13544,559 @@ label.panel-block:hover {
   }
 }
 
+.steps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  font-size: 1rem;
+  min-height: 2rem;
+}
+
+.steps .step-item {
+  margin-top: 0;
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-preferred-size: 0;
+      flex-basis: 0;
+}
+
+.steps .step-item:not(:first-child) {
+  -ms-flex-preferred-size: 1em;
+      flex-basis: 1em;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+}
+
+.steps .step-item:not(:first-child)::before {
+  content: " ";
+  display: block;
+  position: absolute;
+}
+
+.steps .step-item::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #3AAFA9));
+  background: linear-gradient(to left, #dbdbdb 50%, #3AAFA9 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item::before .step-marker {
+  color: #FEFFFF;
+}
+
+.steps .step-item.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #3AAFA9;
+  color: #3AAFA9;
+}
+
+.steps .step-item.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-completed .step-marker {
+  color: #FEFFFF;
+  background-color: #3AAFA9;
+}
+
+.steps .step-item .step-marker {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 50%;
+  font-weight: 700;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #14252A;
+  color: #FEFFFF;
+  border: 0.2em solid #fff;
+  z-index: 1;
+}
+
+.steps .step-item .step-details {
+  text-align: center;
+}
+
+.steps .step-item.is-white::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #FEFFFF));
+  background: linear-gradient(to left, #dbdbdb 50%, #FEFFFF 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-white.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-white.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #FEFFFF;
+  color: #FEFFFF;
+}
+
+.steps .step-item.is-white.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-white.is-completed .step-marker {
+  color: #0a0a0a;
+  background-color: #FEFFFF;
+}
+
+.steps .step-item.is-black::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #0a0a0a));
+  background: linear-gradient(to left, #dbdbdb 50%, #0a0a0a 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-black.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-black.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #0a0a0a;
+  color: #0a0a0a;
+}
+
+.steps .step-item.is-black.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-black.is-completed .step-marker {
+  color: #FEFFFF;
+  background-color: #0a0a0a;
+}
+
+.steps .step-item.is-light::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, whitesmoke));
+  background: linear-gradient(to left, #dbdbdb 50%, whitesmoke 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-light.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-light.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: whitesmoke;
+  color: whitesmoke;
+}
+
+.steps .step-item.is-light.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-light.is-completed .step-marker {
+  color: #363636;
+  background-color: whitesmoke;
+}
+
+.steps .step-item.is-dark::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #363636));
+  background: linear-gradient(to left, #dbdbdb 50%, #363636 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-dark.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-dark.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #363636;
+  color: #363636;
+}
+
+.steps .step-item.is-dark.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-dark.is-completed .step-marker {
+  color: whitesmoke;
+  background-color: #363636;
+}
+
+.steps .step-item.is-primary::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #14252A));
+  background: linear-gradient(to left, #dbdbdb 50%, #14252A 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-primary.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-primary.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #14252A;
+  color: #14252A;
+}
+
+.steps .step-item.is-primary.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-primary.is-completed .step-marker {
+  color: #fff;
+  background-color: #14252A;
+}
+
+.steps .step-item.is-link::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #3273dc));
+  background: linear-gradient(to left, #dbdbdb 50%, #3273dc 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-link.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-link.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #3273dc;
+  color: #3273dc;
+}
+
+.steps .step-item.is-link.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-link.is-completed .step-marker {
+  color: #fff;
+  background-color: #3273dc;
+}
+
+.steps .step-item.is-info::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #209cee));
+  background: linear-gradient(to left, #dbdbdb 50%, #209cee 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-info.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-info.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #209cee;
+  color: #209cee;
+}
+
+.steps .step-item.is-info.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-info.is-completed .step-marker {
+  color: #fff;
+  background-color: #209cee;
+}
+
+.steps .step-item.is-success::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #23d160));
+  background: linear-gradient(to left, #dbdbdb 50%, #23d160 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-success.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-success.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #23d160;
+  color: #23d160;
+}
+
+.steps .step-item.is-success.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-success.is-completed .step-marker {
+  color: #fff;
+  background-color: #23d160;
+}
+
+.steps .step-item.is-warning::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #ffdd57));
+  background: linear-gradient(to left, #dbdbdb 50%, #ffdd57 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-warning.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-warning.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #ffdd57;
+  color: #ffdd57;
+}
+
+.steps .step-item.is-warning.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-warning.is-completed .step-marker {
+  color: rgba(0, 0, 0, 0.7);
+  background-color: #ffdd57;
+}
+
+.steps .step-item.is-danger::before {
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #dbdbdb), color-stop(50%, #ff3860));
+  background: linear-gradient(to left, #dbdbdb 50%, #ff3860 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.steps .step-item.is-danger.is-active::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-danger.is-active .step-marker {
+  background-color: #FEFFFF;
+  border-color: #ff3860;
+  color: #ff3860;
+}
+
+.steps .step-item.is-danger.is-completed::before {
+  background-position: left bottom;
+}
+
+.steps .step-item.is-danger.is-completed .step-marker {
+  color: #fff;
+  background-color: #ff3860;
+}
+
+.steps .steps-content {
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin: 2rem 0;
+}
+
+.steps .steps-content .step-content {
+  display: none;
+}
+
+.steps .steps-content .step-content.is-active {
+  display: block;
+}
+
+.steps .steps-actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.steps .steps-actions .steps-action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 0;
+      flex-basis: 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin: .5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.steps .steps-actions .steps-action .button {
+  width: 100% !important;
+}
+
+.steps.is-animated .step-item::before {
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease;
+}
+
+.steps.is-animated .step-item .step-marker {
+  -webkit-transition: all 0s ease;
+  transition: all 0s ease;
+  -webkit-transition-delay: 1.5s;
+          transition-delay: 1.5s;
+}
+
+.steps .step-item:not(:first-child)::before {
+  height: 0.2em;
+  width: 100%;
+  bottom: 0;
+  left: -50%;
+  top: 1rem;
+}
+
+.steps .step-item .step-marker {
+  height: 2rem;
+  width: 2rem;
+  position: absolute;
+  left: calc(50% - 1rem);
+}
+
+.steps .step-item .step-marker .icon * {
+  font-size: 1rem;
+}
+
+.steps .step-item .step-details {
+  margin-top: 2rem;
+  margin-left: .5em;
+  margin-right: .5em;
+  padding-top: .2em;
+}
+
+.steps .step-item .step-details .step-title {
+  font-size: 1.2rem;
+  font-weight: regular;
+  color: #FEFFFF;
+}
+
+.steps.is-small {
+  font-size: 0.75rem;
+  min-height: 1.5rem;
+}
+
+.steps.is-small .step-item:not(:first-child)::before {
+  height: 0.2em;
+  width: 100%;
+  bottom: 0;
+  left: -50%;
+  top: 0.75rem;
+}
+
+.steps.is-small .step-item .step-marker {
+  height: 1.5rem;
+  width: 1.5rem;
+  position: absolute;
+  left: calc(50% - 0.75rem);
+}
+
+.steps.is-small .step-item .step-marker .icon * {
+  font-size: 0.75rem;
+}
+
+.steps.is-small .step-item .step-details {
+  margin-top: 1.5rem;
+  margin-left: .5em;
+  margin-right: .5em;
+  padding-top: .2em;
+}
+
+.steps.is-small .step-item .step-details .step-title {
+  font-size: 0.9rem;
+  font-weight: regular;
+  color: #FEFFFF;
+}
+
+.steps.is-medium {
+  font-size: 1.25rem;
+  min-height: 2.5rem;
+}
+
+.steps.is-medium .step-item:not(:first-child)::before {
+  height: 0.2em;
+  width: 100%;
+  bottom: 0;
+  left: -50%;
+  top: 1.25rem;
+}
+
+.steps.is-medium .step-item .step-marker {
+  height: 2.5rem;
+  width: 2.5rem;
+  position: absolute;
+  left: calc(50% - 1.25rem);
+}
+
+.steps.is-medium .step-item .step-marker .icon * {
+  font-size: 1.25rem;
+}
+
+.steps.is-medium .step-item .step-details {
+  margin-top: 2.5rem;
+  margin-left: .5em;
+  margin-right: .5em;
+  padding-top: .2em;
+}
+
+.steps.is-medium .step-item .step-details .step-title {
+  font-size: 1.5rem;
+  font-weight: regular;
+  color: #FEFFFF;
+}
+
+.steps.is-large {
+  font-size: 1.5rem;
+  min-height: 3rem;
+}
+
+.steps.is-large .step-item:not(:first-child)::before {
+  height: 0.2em;
+  width: 100%;
+  bottom: 0;
+  left: -50%;
+  top: 1.5rem;
+}
+
+.steps.is-large .step-item .step-marker {
+  height: 3rem;
+  width: 3rem;
+  position: absolute;
+  left: calc(50% - 1.5rem);
+}
+
+.steps.is-large .step-item .step-marker .icon * {
+  font-size: 1.5rem;
+}
+
+.steps.is-large .step-item .step-details {
+  margin-top: 3rem;
+  margin-left: .5em;
+  margin-right: .5em;
+  padding-top: .2em;
+}
+
+.steps.is-large .step-item .step-details .step-title {
+  font-size: 1.8rem;
+  font-weight: regular;
+  color: #FEFFFF;
+}
+
 .m-t-5 {
   margin-top: 5px !important;
 }
@@ -13982,6 +14536,11 @@ label.panel-block:hover {
           transform: rotate(180deg);
 }
 
+img.cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 body,
 html {
   font-family: 'Montserrat', sans-serif;
@@ -14180,6 +14739,17 @@ span.info {
   letter-spacing: 0.2px;
 }
 
+.button.is-disabled {
+  background: #707070;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  pointer-events: none;
+}
+
+.button.is-disabled:hover {
+  background: #707070;
+}
+
 .card.is-primary {
   background: #14252A;
 }
@@ -14188,10 +14758,16 @@ span.info {
   color: #FEFFFF;
 }
 
+.card.is-primary .card-header {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .card .card-header-title {
   font-size: 1.5rem;
   letter-spacing: 1px;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 .card.is-centered {
@@ -14232,6 +14808,10 @@ span.info {
 .card .button.is-floating:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+.card figure {
+  margin: 0 !important;
 }
 
 .post {
@@ -14491,6 +15071,22 @@ table {
   border: 1px solid #EBEBEB;
 }
 
+table .is-location {
+  padding-left: 32px;
+}
+
+table .is-location i {
+  color: #DD4B3E;
+}
+
+table .is-file {
+  padding-left: 36px;
+}
+
+table .is-file i {
+  color: #459EC7;
+}
+
 th {
   color: #FEFFFF !important;
   background: #14252A;
@@ -14546,10 +15142,6 @@ td {
 
 td:last-child {
   border-right: 0px;
-}
-
-.scrollable-table {
-  overflow-x: auto;
 }
 
 .notification {
