--- a/resources/assets/sass/components/_button.scss
+++ b/resources/assets/sass/components/_button.scss
@@ -41,4 +41,12 @@
             letter-spacing: 0.2px;
         }
     }
+    &.is-disabled {
+        background: $muted;
+        box-shadow: none;
+        pointer-events:none;
+        &:hover {
+            background: $muted;
+        }
+    }
 }
