--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -25,3 +25,4 @@
 @import 'components/notification';
 @import 'components/modal';
 @import 'components/pagination';
+@import 'components/confirmation';
