--- a/resources/assets/sass/components/_button.scss
+++ b/resources/assets/sass/components/_button.scss
@@ -12,7 +12,7 @@
         width: 50px;
         margin-bottom: 20px;
         border-radius: 30px;
-        z-index: 99;
+        z-index: $fixed-button-z-index;
         &.aside {
             right: 75px;
         }
