--- a/resources/assets/sass/extensions/_quickview.sass
+++ b/resources/assets/sass/extensions/_quickview.sass
@@ -83,12 +83,13 @@ $quickview-divider: 1px solid $grey-lighter !default
 
 .quickview-footer
   display: flex
-  justify-content: space-between
+  justify-content: space-evenly
   align-items: center
   padding: 0 1rem
   min-height: $quickview-footer-height
   background-color: $white-ter
   border-top: $quickview-divider
+  margin-top: 0
   > *
     margin: 0 .4rem
   i
