--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12153,9 +12153,9 @@ label.panel-block:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -12163,6 +12163,7 @@ label.panel-block:hover {
   min-height: 4rem;
   background-color: whitesmoke;
   border-top: 1px solid #dbdbdb;
+  margin-top: 0;
 }
 
 .quickview-footer > * {
@@ -14551,7 +14552,6 @@ html {
 
 body {
   overflow-y: hidden;
-  padding-bottom: 100px;
 }
 
 .button,
@@ -14587,16 +14587,37 @@ span.info {
   text-align: center;
 }
 
-.banner img {
+.title {
+  text-align: center;
+  line-height: 2em;
+}
+
+.banner {
   height: 35vh;
+  position: relative;
+}
+
+.banner .background {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   -webkit-transform: scaleY(1.2);
           transform: scaleY(1.2);
+  height: 100%;
+  z-index: 1;
+  position: absolute;
 }
 
-.banner.is-small img {
+.banner .logo {
+  position: absolute;
+  z-index: 2;
+  height: 80%;
+  -webkit-transform: translateY(10%) translateX(-50%);
+          transform: translateY(10%) translateX(-50%);
+  left: 50%;
+}
+
+.banner.is-small {
   height: 25vh;
 }
 
@@ -14608,6 +14629,13 @@ span.info {
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
   min-height: 230px;
+}
+
+.thumbnail img {
+  height: 48vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 
 .navbar {
@@ -14652,12 +14680,17 @@ span.info {
   background-color: #2B7A78;
 }
 
+.navbar.is-fixed {
+  position: fixed;
+  width: 100%;
+}
+
 .navbar-top {
   height: 25px;
   width: 100%;
   background: #14252A;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 }
 
 .navbar-top .right {
@@ -14784,7 +14817,6 @@ span.info {
 
 .card.is-person .card-content {
   padding: 10px;
-  height: 5em;
 }
 
 .card.is-person .title {
@@ -14792,7 +14824,6 @@ span.info {
   display: block;
   text-align: center;
   color: #2B7A78;
-  letter-spacing: 2px;
 }
 
 .card .button.is-floating {
@@ -14835,6 +14866,13 @@ span.info {
           filter: blur(2px);
 }
 
+.post:hover .black-and-white {
+  -webkit-transform: scale(1.3) rotate(3deg);
+          transform: scale(1.3) rotate(3deg);
+  -webkit-filter: blur(2px) grayscale(100%);
+          filter: blur(2px) grayscale(100%);
+}
+
 .post .meta {
   position: relative;
   z-index: 0;
@@ -14855,6 +14893,11 @@ span.info {
   transition: -webkit-transform .2s;
   transition: transform .2s;
   transition: transform .2s, -webkit-transform .2s;
+}
+
+.post .photo.black-and-white {
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 
 .post .details,
@@ -15006,6 +15049,39 @@ span.info {
   .post.alt .details {
     padding-left: 25px;
   }
+}
+
+.post.is-vertical {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.post.is-vertical .meta {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+}
+
+.post.is-vertical .description {
+  padding: 1rem;
+  background: #FEFFFF;
+  position: relative;
+  z-index: 1;
+}
+
+.post.is-vertical p:first-of-type {
+  margin-top: 1.25rem;
+}
+
+.post.is-vertical p:first-of-type:before {
+  content: "";
+  height: 0px;
+}
+
+.post.is-vertical h1 {
+  font-size: 1.2rem;
 }
 
 .input,
@@ -15359,6 +15435,50 @@ td:last-child {
 @media only screen and (min-width: 1170px) {
   .confirmation-container {
     margin: 8em auto;
+  }
+}
+
+footer {
+  background: #14252A;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 20vh;
+  color: #FEFFFF;
+}
+
+footer.is-inverse {
+  background: #2B7A78;
+}
+
+.columns.has-padding-30 .column {
+  padding: 30px;
+}
+
+.columns.has-lateral-padding-30 > .column:not(:first-child) {
+  padding-left: 30px;
+}
+
+.columns.has-lateral-padding-30 > .column:not(:last-child) {
+  padding-right: 30px;
+}
+
+.columns.has-lateral-padding-45 > .column:not(:first-child) {
+  padding-left: 45px;
+}
+
+.columns.has-lateral-padding-45 > .column:not(:last-child) {
+  padding-right: 45px;
+}
+
+@media only screen and (min-width: 1088px) {
+  .container {
+    max-width: 1000px !important;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .container {
+    max-width: 1152px !important;
   }
 }
 
