--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,3 +26,5 @@
 @import 'components/modal';
 @import 'components/pagination';
 @import 'components/confirmation';
+@import 'components/footer';
+@import 'components/grid';
