--- a/resources/assets/sass/components/_card.scss
+++ b/resources/assets/sass/components/_card.scss
@@ -26,14 +26,13 @@
         }
         .card-content {
             padding: 10px;
-            height: 5em;
         }
         .title {
             font-size: 1.2rem;
             display: block;
             text-align: center;
             color: $light-primary;
-            letter-spacing: 2px;
+            //letter-spacing: 2px;
         }
     }
     .button {
@@ -69,6 +68,10 @@
             transform: scale(1.3) rotate(3deg);
             filter: blur(2px);
         }
+        .black-and-white {
+            transform: scale(1.3) rotate(3deg);
+            filter: blur(2px) grayscale(100%);
+        }
     }
     .meta {
         position: relative;
@@ -85,6 +88,9 @@
         bottom: 0;
         left: 0;
         transition: transform .2s;
+        &.black-and-white {
+            filter: grayscale(100%);
+        }
     }
     //Informações encima da imagem
     .details, .details ul {
@@ -202,4 +208,31 @@
             }
         }
     }
+    &.is-vertical {
+        flex-direction: column;
+        .meta {
+            position: relative;
+            z-index: $post-z-index;
+            height: 200px;
+        }
+        .description {
+            padding: 1rem;
+            background: $white;
+            position: relative;
+            z-index: $post-z-index + 1;
+        }
+        p {
+            &:first-of-type {
+                margin-top: 1.25rem;
+                &:before {
+                    content: "";
+                    height: 0px;
+                }
+            }
+        }
+        h1 {
+            font-size: 1.2rem;
+        }
+    }
 }
+
